

-Housekeeping / cleanup


-Misc. UX


v5.03.5 and higher renames the admin config array. ALL CONFIGURATION SETTING
VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP, AND
MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.


-------------------------------------------------------------------



-------------------------------------------------------------------
5.10.0:


-Defualt config tweaking


-Housekeeping


-Misc. UX


v5.03.5 and higher renames the admin config array. ALL CONFIGURATION SETTING
VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP, AND
MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.


-------------------------------------------------------------------



-------------------------------------------------------------------
5.11.0:


-Defualt config tweaking


-Housekeeping


-Misc. UX


v5.03.5 and higher renames the admin config array. ALL CONFIGURATION SETTING
VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP, AND
MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.


-------------------------------------------------------------------



-------------------------------------------------------------------
5.12.0:


-Better privacy mode UX / security


-Content / Documentation revisions


v5.03.5 and higher renames the admin config array. ALL CONFIGURATION SETTING
VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP, AND
MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.


-------------------------------------------------------------------



-------------------------------------------------------------------
5.13.0:


-Default config cleanup


-ByBit exchange API support


v5.03.5 and higher renames the admin config array. ALL CONFIGURATION SETTING
VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP, AND
MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.


-------------------------------------------------------------------








