@@ -203,7 +203,11 @@ FEATURES / STRUCTURING SECTION
 ///////////////////////////////////////////////////////
 
 
-A good demo app for building out the interface hooks for plugins to support the GUI runtime (not just the cron runtime), would be to build a chart in the same format as the system stats chart, but put InvictusDAO data in it from https://api.invictusdao.fi/api/dashboard. Another good one would be a monthly interest cost calculator on debt (credit cards / loans / etc).
+
+Error log alerts if $system_alerts array is >= 1. Consider if any alerts should be throttled (like log no more then once per hour, as an example). See other/system-info.php for what we add to the $system_alerts array.
+
+
+A good demo app for building out the interface hooks for plugins to support the GUI runtime (not just the cron runtime), would be a monthly interest cost calculator on debt (credit cards / loans / etc).
 
 
 Add ability to send out alerts if a system resource is redlined, separate alert per resource, with power user config for thresholds, and comms config for enabling / disabling / what comms to use. Also have a max frequency for re-sending like we do for price alerts etc.
@@ -360,9 +364,6 @@ Add memory limit to all runtimes?
 
 
 Maybe add feature to auto-detect new / removed markets?
-
-
-Consider error log alerts if system load is over 2, or free memory goes under 25 megabytes?
 
 
 Alerts if NOT admin ip address visiting (admin ip stored in config setting)?
