@@ -350,7 +350,7 @@ $remote_ip = ( isset($_SERVER['REMOTE_ADDR']) ? $_SERVER['REMOTE_ADDR'] : 'local
 
 
 // Get system info for debugging / stats
-$system_info = $ct_gen->system_info(); // MUST RUN AFTER SETTING $base_dir
+require_once('app-lib/php/other/system-info.php');
 
 
 // If upgrade check enabled / cached var set, set the runtime var for any configured alerts
